# mmodel

./: .gitignore  CHANGELOG.rst  CONTRIBUTE.rst  LICENSE  README.rst  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: docs.yml  tox.yml
docs/: api_handler.rst  api_metadata.rst  api_modifier.rst  api_modifier_shortcut.rst  api_signature.rst  conf.py  graph.rst  handler.rst  index.rst  loop.rst  make.bat  model.rst  modifier.rst  overview.rst  ref_filter.rst  ref_graph.rst  ref_handler.rst  ref_metadata.rst  ref_model.rst  ref_modifier.rst  ref_node.rst  ref_parser.rst  ref_shortcut.rst  ref_signature.rst  ref_utility.rst  ref_visualizer.rst  tutorial_graph.rst  tutorial_group.rst  tutorial_model.rst  tutorial_modifier.rst  tutorial_node.rst  tutorial_subgraph.rst
mmodel/: __init__.py  doc.py  draw.py  executor.py  filter.py  graph.py  group.py  handler.py  loop.py  metadata.py  model.py  modifier.py  node.py  parser.py  shortcut.py  signature.py  utility.py  visualizer.py
tests/: conftest.py  test_doc.py  test_draw.py  test_filter.py  test_graph.py  test_group.py  test_handler.py  test_loop.py  test_metadata.py  test_model.py  test_modifier.py  test_node.py  test_parser.py  test_shortcut.py  test_signature.py  test_utility.py  test_visualizer.py
