[tool.poetry]
name = "MModel"
version = "0.3.0"
description = "Modular modeling framework for nonlinear scientific models"
readme = "README.rst"
license = "BSD-3-Clause"
authors = ["Peter Sun <hs859@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "github.coecis.cornell.edu/Marohn-Group/MModel"
packages = [{ include = "mmodel" }]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.6"
networkx = ">=2.8.3"
h5py = ">=3.6.0"
graphviz = ">=0.16"
tox = { version = ">=3.24.5", optional = true }
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
sphinx = { version = "^4.5.0", optional = true }
sphinx-book-theme = { version = "^0.3.2", optional = true }
nbsphinx = { version = "^0.8.8", optional = true }

[tool.poetry.dev-dependencies]
tox = ">=3.24.5"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
sphinx = "^4.4.0"
sphinx-book-theme = "^0.3.2"
nbsphinx = "^0.8.8"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
docs = ["nbsphinx", "sphinx", "sphinx_book_theme"]

[tool.coverage.run]
# pytest coverage
source_pkgs = ['mmodel']
omit = ['tests/*']

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    # the escape sequence is necessary in graphviz dot string
    # used to left align node text
    'ignore:invalid escape sequence \\l:DeprecationWarning',
]

[tool.tox]
# for testing different python environments
# somehow poetry, tox and python3.10 don't work
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, coverage, docs
isolated_build = True

[testenv:py38]
deps = pytest >= 7.1.1
commands = pytest

[testenv:py39]
deps = pytest >= 7.1.1
commands = pytest

[testenv:coverage]
deps = 
    pytest >= 7.1.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

[testenv:docs]
deps = 
    sphinx == 4.5.0
    sphinx-book-theme == 0.3.2
    nbsphinx == 0.8.8
commands =
    # sphinx-build -W -b html ./docs ./docs/_build/html
    sphinx-build -W -b html -d "{toxworkdir}/docs" docs "{toxinidir}/docs/_build/html"
"""

