[tool.poetry]
name = "mmodel"
version = "0.5.2"
description = "Modular modeling framework for scientific modeling and prototyping."
readme = "README.rst"
license = "BSD-3-Clause"
authors = ["Peter Sun <hs859@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://github.com/peterhs73/MModel"
packages = [{ include = "mmodel" }]
homepage = "https://peterhs73.github.io/mmodel-docs/"
documentation = "https://peterhs73.github.io/mmodel-docs/"
keywords = ["python", "scientific-modeling", "prototyping"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"
networkx = ">=2.8.3"
h5py = ">=3.6.0"
graphviz = ">=0.16"
tox = { version = ">=3.24.5", optional = true }
tox-conda = { version = ">=0.9.2", optional = true}
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
sphinx = { version = "^6.1.3", optional = true }
sphinx-book-theme = { version = "=1.0.0", optional = true }
pydata-sphinx-theme = { version = "=0.13.1", optional = true } 
nbsphinx = { version = "=0.9.1", optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
docs = ["nbsphinx", "sphinx", "sphinx_book_theme", "pydata-sphinx-theme"]

[tool.coverage.run]
# pytest coverage
source_pkgs = ['mmodel']
omit = ['tests/*']

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    # the escape sequence is necessary in graphviz dot string
    # used to left align node text
    'ignore:invalid escape sequence \\l:DeprecationWarning',
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, coverage, docs
isolated_build = True

[gh-actions]
python =
    3.8: py38, docs
    3.9: py39, docs
    3.10: py310, docs
    3.11: py311, docs

[testenv:py38]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py39]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py310]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py311]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:coverage]
deps = 
    pytest >= 7.1.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

[testenv:docs]
deps = 
    sphinx == 6.1.3
    sphinx-book-theme >=1.0.0
    nbsphinx == 0.9.1
    pydata-sphinx-theme == 0.13.1
commands =
    # sphinx-build -W -b html ./docs ./docs/_build/html
    sphinx-build -W -b html -d "{toxworkdir}/docs" docs "{toxinidir}/docs/_build/html"
"""

